- Summary:  [HEAD] Fixed ui editors plugin bugs reported by findbugs.
- Bugzilla Bug (s) Resolved:

- Description:

- Tests Description: Manual test.

- Notes to Build Team:

- Notes to Developers:

- Notes to QA:

- Notes to Documentation:

- Files Added:


- Files Edited:


- Files Deleted: